--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -r dotenv/config src/index.js",
+    "dev": "nodemon -r dotenv/config src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
